Skrevet om en del av koden til spring
Co-authored-by: Kent D <kent.daleng@nav.no>
Co-authored-by: Håvard Stigen Andersen <havard.stigen.andersen@nav.no>